--- a/twitter-demo/twitter-demo/Base.lproj/Main.storyboard
+++ b/twitter-demo/twitter-demo/Base.lproj/Main.storyboard
@@ -57,16 +57,15 @@
                         <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="135" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sUK-f0-Ntu">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="135" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sUK-f0-Ntu">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="135" id="GtR-a9-2yo" customClass="TweetCell" customModule="twitter_demo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="135"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GtR-a9-2yo" id="4xU-ia-Uc3">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="134"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="134.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lbo-A7-MBe">
@@ -100,8 +99,8 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95G-2F-ms9">
-                                                    <rect key="frame" x="107" y="110" width="8" height="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95G-2F-ms9">
+                                                    <rect key="frame" x="107" y="107.5" width="8" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -128,8 +127,8 @@
                                                         <action selector="onRetweetClicked:" destination="GtR-a9-2yo" eventType="touchUpInside" id="J2p-Ff-feE"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jp7-ba-pNJ">
-                                                    <rect key="frame" x="203" y="109" width="8" height="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jp7-ba-pNJ">
+                                                    <rect key="frame" x="203" y="106.5" width="8" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -142,7 +141,7 @@
                                                 <constraint firstItem="68O-Jx-Q4y" firstAttribute="baseline" secondItem="4yS-b5-39q" secondAttribute="baseline" id="Efb-aj-9VU"/>
                                                 <constraint firstItem="9zs-kf-eUI" firstAttribute="leading" secondItem="95G-2F-ms9" secondAttribute="trailing" constant="64" id="GEw-DI-b76"/>
                                                 <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="uge-cV-9tz" secondAttribute="bottom" constant="30" id="Hnh-IB-fij"/>
-                                                <constraint firstItem="Tt3-uM-ufN" firstAttribute="leading" secondItem="lbo-A7-MBe" secondAttribute="trailing" constant="14" id="JfS-pl-UKI"/>
+                                                <constraint firstItem="Tt3-uM-ufN" firstAttribute="leading" secondItem="4xU-ia-Uc3" secondAttribute="leadingMargin" constant="74" id="TfU-J4-503"/>
                                                 <constraint firstItem="uge-cV-9tz" firstAttribute="leading" secondItem="lbo-A7-MBe" secondAttribute="trailing" constant="8" id="W4h-sD-PuW"/>
                                                 <constraint firstItem="a0N-yY-vmj" firstAttribute="baseline" secondItem="4yS-b5-39q" secondAttribute="baseline" id="a9v-eh-Mue"/>
                                                 <constraint firstItem="a0N-yY-vmj" firstAttribute="leading" secondItem="4yS-b5-39q" secondAttribute="trailing" constant="7.5" id="f64-rr-GHl"/>
@@ -176,11 +175,22 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ODb-rd-Myt" firstAttribute="top" secondItem="sUK-f0-Ntu" secondAttribute="bottom" id="7Dk-dL-Kem"/>
+                            <constraint firstItem="sUK-f0-Ntu" firstAttribute="leading" secondItem="bl4-Zd-BjZ" secondAttribute="leading" id="E4G-qU-ed9"/>
+                            <constraint firstAttribute="trailing" secondItem="sUK-f0-Ntu" secondAttribute="trailing" id="U87-5Q-WBb"/>
+                            <constraint firstItem="sUK-f0-Ntu" firstAttribute="top" secondItem="XbJ-xw-qef" secondAttribute="bottom" id="Z1Z-eX-Aky"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Twitter" id="ofK-Xj-Icr">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="xwY-Q2-6Au">
                             <connections>
                                 <action selector="onLogOutButton:" destination="OVt-nD-7as" id="1CJ-gb-thl"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="AgJ-DN-FjZ">
+                            <connections>
+                                <segue destination="VcW-Wt-gXp" kind="show" id="fhp-14-uTz"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -191,6 +201,56 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5ID-3h-8OJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1621.5999999999999" y="130.88455772113943"/>
+        </scene>
+        <!--Create Tweet View Controller-->
+        <scene sceneID="PaH-db-TNV">
+            <objects>
+                <viewController id="VcW-Wt-gXp" customClass="CreateTweetViewController" customModule="twitter_demo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3dg-EZ-tfP"/>
+                        <viewControllerLayoutGuide type="bottom" id="xzL-ir-6Ph"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rYZ-4S-jjq">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="What's happening?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZgQ-x1-BqW">
+                                <rect key="frame" x="16" y="106" width="327" height="497"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nqu-0n-OVz">
+                                <rect key="frame" x="16" y="20" width="60" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="userName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Me3-Si-w13">
+                                <rect key="frame" x="84" y="31" width="71" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="screenName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qs1-9f-gPG">
+                                <rect key="frame" x="84" y="52" width="71" height="15"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vme-CL-dPz">
+                                <rect key="frame" x="8" y="91" width="351" height="1"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ohh-LP-Yzs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1621.5999999999999" y="882.90854572713647"/>
         </scene>
         <!--Details Tweet Controller-->
         <scene sceneID="hHO-WV-Pgo">
@@ -294,7 +354,7 @@
                                     <action selector="onFavoriteClicked:" destination="rHZ-EF-siE" eventType="touchUpInside" id="c5S-Ge-CpN"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9N9-dQ-Van">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9N9-dQ-Van">
                                 <rect key="frame" x="8" y="203" width="351" height="1"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
@@ -334,6 +394,7 @@
                             <constraint firstItem="9N9-dQ-Van" firstAttribute="top" secondItem="rbS-Aa-g1q" secondAttribute="bottom" constant="30" id="bXc-sx-KdJ"/>
                             <constraint firstItem="jHo-Ao-9r5" firstAttribute="top" secondItem="crD-pT-hns" secondAttribute="bottom" constant="7" id="cp8-sq-bpN"/>
                             <constraint firstItem="t6m-xb-9nW" firstAttribute="top" secondItem="rbS-Aa-g1q" secondAttribute="bottom" constant="8" id="dG5-z8-7r9"/>
+                            <constraint firstItem="9N9-dQ-Van" firstAttribute="leading" secondItem="WTj-tb-ghc" secondAttribute="leadingMargin" constant="-8" id="hlg-ef-tDa"/>
                             <constraint firstItem="QJC-TB-W5D" firstAttribute="top" secondItem="rbS-Aa-g1q" secondAttribute="bottom" constant="8" id="irB-gP-X5K"/>
                             <constraint firstItem="aBz-EB-kG5" firstAttribute="leading" secondItem="WTj-tb-ghc" secondAttribute="leadingMargin" constant="-8" id="j7Z-aP-58W"/>
                             <constraint firstItem="crD-pT-hns" firstAttribute="top" secondItem="aBz-EB-kG5" secondAttribute="bottom" constant="8" id="l07-zr-Y5D"/>
